# shangjijiance

./: .dockerignore  .env.example  .gitignore  API_DOC.md  Dockerfile  Dockerfile-sany  Jenkinsfile  README.md  app.py  concurrency_config.yaml  docker-compose.yml  extract_fields.yaml  gunicorn.conf.py  html_clean_demo.py  main.py  normalize_item_meta_flat_fields.yaml  old_trans.py  pyproject.toml  requirements.txt  test_address_normalizer_foreign.py  test_all.py  test_api.py  test_batch_1.py  test_batch_2.py  test_batch_3.py  test_batch_4.py  test_batch_5.py  test_estimated_amount_deriver.py  test_is_overseas_project.py  test_lots_expansion.py  test_normalize_item_markdown_input.py  test_official_startup_notify.py  test_results_batch2.json  trans.py  trans_sany.py  trans_sany_guanfang_api.py  val.yaml
.claude/: settings.local.json
deploy/: entrypoint.sh  nginx.conf  run_multi_uvicorn.py  run_uvicorn_worker.sh  supervisord.conf
docs/: crawler_flow.mmd  一期二期项目对比分析.md  一期项目技术方案分析.md  二期项目技术方案分析.md  二期项目流程图.mmd  部署调试指南.md
pricing/: token_cost_pricing.json
prompts/: ALL.txt  fuwu.txt
scripts/: bench_normalize_item.py  check_browser_use_usage.py  export_browser_use_pricing.py  json_to_yaml.py  wrap_source_json.py
src/: __init__.py  address_normalizer.py  algorithm_version.py  announcement_type_repair.py  browser_use_budget.py  concrete_product_table.py  concurrent_processor.py  config_manager.py  crawl_detail_graph.py  custom_tools.py  deepseek_langchain.py  detail_processor.py  embedding_client.py  estimated_amount_deriver.py  estimated_amount_policy.py  jenkins.md  (+16 more)
(+199 files in other folders)
