[project]
name = "crawler-agent"
version = "1.0.0"
description = "AI驱动的招投标信息自动监测系统，提供SSE流式HTTP API"
requires-python = ">=3.11"

dependencies = [
    # 核心框架
    "pydantic>=2.11.5",
    "browser-use>=0.11.5",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    # 配置管理
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "markdownify>=1.2.2",
    
    # HTTP API 服务
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    
    # 日志
    "loguru>=0.7.0",
]

[tool.pyright]
# 让 Pylance / basedpyright 使用项目 .venv，从而解析 fastapi / starlette 等依赖
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app.py", "gunicorn.conf.py", "prompts", "extract_fields.yaml"]
